--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.journeyapps:zxing-android-embedded:4.0.2'
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
 
-
+    implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
