--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
 
+    implementation 'com.ms-square:expandableTextView:0.1.4'
+
     implementation 'com.google.android.gms:play-services-safetynet:17.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.core:core-ktx:1.1.0'
@@ -82,6 +84,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
     kapt 'androidx.annotation:annotation:1.1.0'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
